tests/baselines/reference/functionCall8.errors.txt
==== tests/cases/compiler/functionCall8.ts (4 errors) ====
    function foo(a?:string){}
    foo('foo'); 
    foo('foo', 'bar'); 
    ~~~
!!! error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo(4);
    ~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo();
    